[gd_scene load_steps=2 format=3 uid="uid://ccs8bafnm4gtc"]

[ext_resource type="Script" path="res://ui/pause_menu/pause_screen.gd" id="1_hkhs3"]

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_hkhs3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Back to Main Menu"
